# sys-prog-4

./: CMakeLists.txt  CMakePresets.json
include/: network_exceptions.h  protocol.h  sockutils.h
include/client/: client.h
include/game/: game.h  game_server.h  protocol.h
include/server/: client.h  server.h
src/: sockutils.c
src/client/: client.c  main.c
src/game/: game.c  game_server.c  protocol.c
src/server/: client.c  main.c  server.c
